crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_by_target__doesnt_error_for_internal_task_when_depended_on.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SyncProject(misc)" ]
    2 [ label="RunTask(misc:requiresInternal)" ]
    3 [ label="SyncProject(common)" ]
    4 [ label="SyncProject(base)" ]
    5 [ label="RunTask(common:internal)" ]
    1 -> 0 [ ]
    4 -> 0 [ ]
    3 -> 0 [ ]
    3 -> 4 [ ]
    5 -> 3 [ ]
    2 -> 1 [ ]
    2 -> 5 [ ]
}
