crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_by_target__runs_all.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(common)"]
    2 [ label="SyncProject(base)"]
    3 [ label="RunTask(common:build)"]
    4 [ label="SyncProject(client)"]
    5 [ label="SyncProject(server)"]
    6 [ label="RunTask(client:build)"]
    7 [ label="SetupProto(1.2.3)"]
    8 [ label="SetupToolchain(rust)"]
    9 [ label="RunTask(server:build)"]
    10 [ label="RunTask(base:build)"]
    2 -> 0 [ label="required"]
    1 -> 0 [ label="required"]
    1 -> 2 [ label="required"]
    3 -> 1 [ label="required"]
    5 -> 0 [ label="required"]
    4 -> 0 [ label="required"]
    4 -> 5 [ label="required"]
    4 -> 1 [ label="required"]
    8 -> 0 [ label="required"]
    8 -> 7 [ label="required"]
    9 -> 5 [ label="required"]
    9 -> 8 [ label="required"]
    6 -> 4 [ label="required"]
    6 -> 3 [ label="required"]
    6 -> 9 [ label="required"]
    10 -> 2 [ label="required"]
}
