crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_by_target__runs_all_with_query.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(server)"]
    2 [ label="SetupProto(1.2.3)"]
    3 [ label="SetupToolchain(rust)"]
    4 [ label="RunTask(server:build)"]
    1 -> 0 [ label="required"]
    3 -> 0 [ label="required"]
    3 -> 2 [ label="required"]
    4 -> 1 [ label="required"]
    4 -> 3 [ label="required"]
}
