crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_task_by_target__runs_tag.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(client)"]
    2 [ label="SyncProject(server)"]
    3 [ label="SyncProject(common)"]
    4 [ label="SyncProject(base)"]
    5 [ label="SetupProto(1.2.3)"]
    6 [ label="SetupToolchain(javascript)"]
    7 [ label="RunTask(client:lint)"]
    8 [ label="RunTask(common:lint)"]
    2 -> 0 [ label="required"]
    4 -> 0 [ label="required"]
    3 -> 0 [ label="required"]
    3 -> 4 [ label="required"]
    1 -> 0 [ label="required"]
    1 -> 2 [ label="required"]
    1 -> 3 [ label="required"]
    6 -> 0 [ label="required"]
    6 -> 5 [ label="required"]
    7 -> 1 [ label="required"]
    7 -> 6 [ label="required"]
    8 -> 3 [ label="required"]
}
